@@ -9,6 +9,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - make qdel -m functionality match the documentation
   b - prevent runaway hellos being sent to server when mom's node is removed
       from the server's node list
+  e - changed pbs_server to have "-l" option. Specifies a host/port that event
+      messages will be sent to. Event messages are the same as what the
+      scheduler currently receives.
 
 2.2.1
   b - fix a bug where dependent jobs get put on hold when the previous job has
